# xiaosu-bilibili-bot

./: .gitignore  LICENSE  README.md  bilibot.service  pyproject.toml  requirements.txt
config/: bot-config.toml  system-prompt.txt
data.backup-20260512-0743/: bot-state.json  feedback.jsonl  processed.jsonl  reply-history.jsonl  search_quota.json
scripts/: bilibili_wbi.py
src/bilibili_bot/: __main__.py  atomic_state.py  auto_skip.py  bilibili-comment-bot.py  bot_config.py  client.py  config.py  content_safety.py  cookie_refresh.py  dm_dedup.py  dm_prompt.py  dm_sender.py  dm_source.py  events.py  protocols.py  rate_control.py  reply_providers.py  state_store.py  stats.py
src/bilibili_bot/pipeline/: dedup.py  filter.py  generate.py  rate_limit.py  send.py
src/bilibili_bot/providers/: manager.py  openai_compat.py
src/bilibili_bot/sources/: dm.py  mention.py  msgfeed.py  own_dynamic.py  own_video.py
src/bilibili_bot/tools/: __init__.py  transcribe.py  web_search.py
tests/: test_agent.py  test_atomic_state.py  test_config.py  test_dedup.py  test_msgfeed.py  test_tools.py
