[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bilibili-bot"
version = "4.1.0"
description = "Bilibili 评论自动回复机器人 v3"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic-ai[openai]>=1.93.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
tools = [
    "faster-whisper>=1.0.0",
    "ddgs>=3.0.0",
    "yt-dlp>=2024.4.9",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bilibili_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
